--- a/express-basics/package.json
+++ b/express-basics/package.json
@@ -4,6 +4,7 @@
   "description": "Express Js",
   "main": "app.js",
   "scripts": {
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "RM",
